--- a/style/style.css
+++ b/style/style.css
@@ -117,7 +117,7 @@ body {
   
 
     .apresentacao__links__navegacao:hover {
-        background-color: var(--cor-hover);
+        background-color: var(--cor-terciaria);
         
     }
 
