--- a/style/style.css
+++ b/style/style.css
@@ -52,8 +52,7 @@ body {
     align-items: center;
     justify-content: space-between;
     gap: 82px;
-    width: 50%
-       
+           
           
 }
 
@@ -101,11 +100,10 @@ body {
     display: flex;
     justify-content: center;
     gap: 16px;
-    width: 378px;
+    width: 50%;
     border: 2px solid var(--cor-terciaria);
     text-align: center;
     border-radius: 8px;
-    margin: 10px;
     font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
@@ -141,6 +139,7 @@ body {
         
         .apresentacao{
             flex-direction: column-reverse;
+            padding: 5%;
         }
 
 
@@ -156,7 +155,7 @@ body {
     .rodape {
         color: var(--cor-primaria);
         background-color: var(--cor-terciaria);
-        padding: 20px;
+        padding: 24px;
         font-family: var(--fonte-secundaria);
         font-size: 1.5rem;
         font-weight: 400;
