--- a/style/style.css
+++ b/style/style.css
@@ -104,6 +104,7 @@ body {
     border: 2px solid var(--cor-terciaria);
     text-align: center;
     border-radius: 8px;
+    margin: 10px;
     font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
