--- a/style/style.css
+++ b/style/style.css
@@ -100,7 +100,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 16px;
-    width: 378px;
+    width: 50%;
     border: 2px solid var(--cor-terciaria);
     text-align: center;
     border-radius: 8px;
